--- a/sass/components/_frame.scss
+++ b/sass/components/_frame.scss
@@ -20,7 +20,7 @@
             left: 0;
 
             &:hover p:after {
-                content: "Die digitale Zukunft der Baubranche";
+                content: "Digitales Modell";
             }
         }
 
@@ -29,7 +29,7 @@
             left: 33%;
 
             &:hover p:after {
-                content: "Umsetzung aller BIM-Dimensionen";
+                content: "Kosten";
             }
         }
 
@@ -39,7 +39,7 @@
             left: 33%;
 
             &:hover p:after {
-                content: "Visualisierungen aller Art";
+                content: "Nachhaltigkeit";
             }
         }
 
@@ -49,7 +49,7 @@
             left: 33%;
 
             &:hover p:after {
-                content: "Visualisierungen aller Art";
+                content: "Zeit";
             }
         }
 
@@ -59,7 +59,7 @@
             left: 66%;
 
             &:hover p:after {
-                content: "Visualisierungen aller Art";
+                content: "Betrieb";
             }
         }
 
