--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,9 +4,10 @@
     background-image: linear-gradient(to right bottom,
             rgba($color-white, 0.2),
             rgba($color-white, 0.2)),
-        url("../img/head.jpg");
+        url("../img/head-1.jpg");
     background-size: cover;
     background-position: top;
+    padding: 0 !important;
 
 
 }
