--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -48,7 +48,9 @@ body {
 }
 
 section {
-    padding-top: 1.85rem;
+    padding-top: 2rem;
+    padding-bottom: 4rem;
+    position: relative;
 }
 
 
