--- a/sass/components/_slide-card.scss
+++ b/sass/components/_slide-card.scss
@@ -1,6 +1,6 @@
 .slidecard {
     width: 800px;
-    height: 400px;
+    height: fit-content;
     position: relative;
     display: flex;
     align-items: center;
@@ -9,8 +9,8 @@
 
 
     &-nav {
-        right: 25%;
-        top: 25%;
+        right: 50px;
+        top: 50px;
         position: absolute;
         z-index: 2;
 
@@ -60,11 +60,22 @@
     }
 
     &-content {
-        position: absolute;
         padding-left: 200px;
         padding-right: 50px;
         width: 100%;
         height: 100%;
+
+        &-1 {
+            position: relative;
+        }
+
+        &-2 {
+            position: absolute;
+        }
+
+        &-3 {
+            position: absolute;
+        }
 
 
         &.active &-heading {
@@ -134,6 +145,7 @@
 
         &-text {
             width: 100%;
+            padding-bottom: 40px;
             font-size: 1.1rem;
             opacity: 0;
             transform: translateY(5rem);
@@ -145,148 +157,148 @@
     }
 }
 
-@media only screen and (max-width: 1600px) {
-    .slidecard {
-        &-nav {
-            top: 1rem;
-            right: 1rem;
+// @media only screen and (max-width: 1600px) {
+//     .slidecard {
+//         &-nav {
+//             top: 1rem;
+//             right: 1rem;
 
-            &-cube {
-                margin-left: 1rem;
-                width: 15px;
-                height: 15px;
-            }
-        }
+//             &-cube {
+//                 margin-left: 1rem;
+//                 width: 15px;
+//                 height: 15px;
+//             }
+//         }
 
-        &-content {
-            padding-right: 2rem;
-            padding-left: 2rem;
-            padding-bottom: 9rem;
+//         &-content {
+//             padding-right: 2rem;
+//             padding-left: 2rem;
+//             padding-bottom: 9rem;
 
-            &.active &-image {
-                opacity: 1;
-                transform: translateX(-50%);
-            }
+//             &.active &-image {
+//                 opacity: 1;
+//                 transform: translateX(-50%);
+//             }
 
-            &-image {
+//             &-image {
 
-                width: 300px;
-                height: 200px;
-                top: 80%;
-                left: 50%;
-            }
+//                 width: 300px;
+//                 height: 200px;
+//                 top: 80%;
+//                 left: 50%;
+//             }
 
-            &-heading {
-                margin-top: 5rem;
-                font-size: 1.7rem;
-            }
+//             &-heading {
+//                 margin-top: 5rem;
+//                 font-size: 1.7rem;
+//             }
 
-            &-text {
-                margin-top: 1rem;
-                width: 90%;
-                top: 6rem;
-            }
-        }
-    }
-}
+//             &-text {
+//                 margin-top: 1rem;
+//                 width: 90%;
+//                 top: 6rem;
+//             }
+//         }
+//     }
+// }
 
-@media only screen and (max-width: 600px) {
-    .slidecard {
-        height: 400px;
+// @media only screen and (max-width: 600px) {
+//     .slidecard {
+//         height: 400px;
 
-        &-nav {
-            top: 1rem;
-            left: 1rem;
+//         &-nav {
+//             top: 1rem;
+//             left: 1rem;
 
-            &-cube {
-                margin-left: 1rem;
-                width: 15px;
-                height: 15px;
-            }
-        }
+//             &-cube {
+//                 margin-left: 1rem;
+//                 width: 15px;
+//                 height: 15px;
+//             }
+//         }
 
-        &-content {
+//         &-content {
 
-            padding-right: 1rem;
-            padding-left: 1rem;
-            padding-bottom: 9rem;
-            height: 400px;
+//             padding-right: 1rem;
+//             padding-left: 1rem;
+//             padding-bottom: 9rem;
+//             height: 400px;
 
-            &.active &-image {
-                opacity: 1;
-                transform: translateX(-50%);
-            }
+//             &.active &-image {
+//                 opacity: 1;
+//                 transform: translateX(-50%);
+//             }
 
-            &-image {
+//             &-image {
 
-                width: 200px;
-                height: 180px;
-                top: 80%;
-                left: 50%;
-            }
+//                 width: 200px;
+//                 height: 180px;
+//                 top: 80%;
+//                 left: 50%;
+//             }
 
-            &-heading {
-                margin-top: 4rem;
-                font-size: 1.7rem;
-            }
+//             &-heading {
+//                 margin-top: 4rem;
+//                 font-size: 1.7rem;
+//             }
 
-            &-text {
-                margin-top: 1rem;
-                font-size: 1rem;
-            }
-        }
-    }
-}
+//             &-text {
+//                 margin-top: 1rem;
+//                 font-size: 1rem;
+//             }
+//         }
+//     }
+// }
 
 
-@media only screen and (max-width: 400px) {
-    .slidecard {
-        height: 500px;
+// @media only screen and (max-width: 400px) {
+//     .slidecard {
+//         height: 500px;
 
-        &-nav {
-            top: 1rem;
-            left: 1rem;
+//         &-nav {
+//             top: 1rem;
+//             left: 1rem;
 
-            &-cube {
-                margin-left: 1rem;
-                width: 15px;
-                height: 15px;
-            }
-        }
+//             &-cube {
+//                 margin-left: 1rem;
+//                 width: 15px;
+//                 height: 15px;
+//             }
+//         }
 
-        &-content {
+//         &-content {
 
-            padding-right: 1rem;
-            padding-left: 1rem;
-            padding-bottom: 9rem;
-            height: 500px;
-            text-align: center;
+//             padding-right: 1rem;
+//             padding-left: 1rem;
+//             padding-bottom: 9rem;
+//             height: 500px;
+//             text-align: center;
 
-            &.active &-image {
-                opacity: 1;
-                transform: translateX(-50%);
-            }
+//             &.active &-image {
+//                 opacity: 1;
+//                 transform: translateX(-50%);
+//             }
 
-            &-image {
+//             &-image {
 
-                width: 180px;
-                height: 150px;
-                top: 80%;
-                left: 50%;
-            }
+//                 width: 180px;
+//                 height: 150px;
+//                 top: 80%;
+//                 left: 50%;
+//             }
 
-            &-heading {
-                text-align: center;
-                margin-top: 4rem;
+//             &-heading {
+//                 text-align: center;
+//                 margin-top: 4rem;
 
-                font-size: 1.2rem;
-                letter-spacing: .2rem;
-            }
+//                 font-size: 1.2rem;
+//                 letter-spacing: .2rem;
+//             }
 
-            &-text {
-                margin: 0rem !important;
-                font-size: .9rem;
-            }
-        }
-    }
-}
+//             &-text {
+//                 margin: 0rem !important;
+//                 font-size: .9rem;
+//             }
+//         }
+//     }
+// }
