--- a/css/style.css
+++ b/css/style.css
@@ -796,6 +796,7 @@ section {
     width: 130%;
     height: 100%;
     transform-origin: 0 0;
+    -webkit-transform: translateX(-100%) skewX(-45deg);
     transform: translateX(-100%) skewX(-45deg);
     background-color: #f7d147;
     transition: all .8s;
