--- a/sass/components/_faqslider.scss
+++ b/sass/components/_faqslider.scss
@@ -64,6 +64,7 @@
         width: 130%;
         height: 100%;
         transform-origin: 0 0;
+        -webkit-transform: translateX(-100%) skewX(-45deg);
         transform: translateX(-100%) skewX(-45deg);
         background-color: darken($color-primary, 0%);
         transition: all .8s;
