--- a/sass/layout/_faq.scss
+++ b/sass/layout/_faq.scss
@@ -1,3 +1,9 @@
 #faq {
     padding-bottom: 10rem;
 }
+
+@media only screen and (max-width: 600px) {
+    #faq {
+        padding-bottom: 2rem;
+    }
+}
