--- a/sass/components/_faqslider.scss
+++ b/sass/components/_faqslider.scss
@@ -149,7 +149,7 @@
 
 
         &>p {
-            font-size: .7rem;
+            font-size: 1rem;
             letter-spacing: .01rem;
         }
     }
