--- a/sass/components/_slide-card.scss
+++ b/sass/components/_slide-card.scss
@@ -1,6 +1,7 @@
 .slidecard {
     width: 800px;
-    height: fit-content;
+    max-height: fit-content;
+
     position: relative;
     display: flex;
     align-items: center;
@@ -63,7 +64,8 @@
         padding-left: 200px;
         padding-right: 50px;
         width: 100%;
-        height: 100%;
+        max-height: 100%;
+        transition: max-height 1s;
 
         &-1 {
             position: relative;
@@ -157,7 +159,7 @@
     }
 }
 
- @media only screen and (max-width: 1600px) {
+@media only screen and (max-width: 1600px) {
     .slidecard {
         width: 700px;
 
@@ -171,7 +173,7 @@
 
             &-text {
                 padding-bottom: 170px;
-     
+
             }
 
 
@@ -180,20 +182,20 @@
                 top: 60%;
                 height: 200px;
                 width: 280px;
-                transform: translate(-50%,50%);
+                transform: translate(-50%, 50%);
             }
 
             &.active &-image {
                 opacity: 1;
-                transform: translate(-50%,0);
+                transform: translate(-50%, 0);
             }
+        }
     }
- }
 }
 
 @media only screen and (max-width: 980px) {
     .slidecard {
-        
+
         &-nav {
 
             &-cube {
@@ -213,7 +215,7 @@
 
             &-text {
                 padding-bottom: 170px;
-     
+
             }
 
 
@@ -222,26 +224,28 @@
                 top: 70%;
                 height: 200px;
                 width: 280px;
-                transform: translate(-50%,50%);
+                transform: translate(-50%, 50%);
             }
 
             &.active &-image {
                 opacity: 1;
-                transform: translate(-50%,0);
+                transform: translate(-50%, 0);
             }
+        }
     }
- }
 }
 
 
 @media only screen and (max-width: 600px) {
     .slidecard {
 
+        margin-bottom: 50px;
+
         &-nav {
             left: 50%;
             width: 100%;
             transform: translateX(-50%);
-            top: 10px;
+            top: 20px;
         }
 
         &-content {
@@ -249,12 +253,13 @@
             padding-right: 20px;
 
             &-heading {
-                margin-top: 40px;
+                margin-top: 50px;
             }
 
             &-text {
-                padding-bottom: 170px;
-     
+                padding-top: 10px;
+                padding-bottom: 120px;
+
             }
 
 
@@ -263,13 +268,13 @@
                 top: 80%;
                 height: 140px;
                 width: 220px;
-                transform: translate(-50%,50%);
+                transform: translate(-50%, 50%);
             }
 
             &.active &-image {
                 opacity: 1;
-                transform: translate(-50%,0);
+                transform: translate(-50%, 0);
             }
+        }
     }
- }
 }
