--- a/sass/components/_slideshow.scss
+++ b/sass/components/_slideshow.scss
@@ -53,7 +53,9 @@
     right: 10%;
     width: auto;
     margin-top: -22px;
-    padding: 16px;
+    padding: 10px 15px 10px 15px;
+    background-color: white;
+    border: 2px solid $color-dark;
     color: $color-black;
     font-weight: bold;
     font-size: 18px;
