--- a/sass/layout/_boxes.scss
+++ b/sass/layout/_boxes.scss
@@ -45,7 +45,7 @@
     }
 
     &-3 {
-        background-color: rgba($color: $color-dark, $alpha: .8);
+        background-color: $color-dark;
         color: white;
     }
 
@@ -97,7 +97,7 @@
         }
 
         & p {
-            padding: 0 4rem 0 15rem;
+            padding: 0 2rem 0 15rem;
         }
 
         & h1 {
@@ -110,7 +110,7 @@
 
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 980px) {
     .box {
         & h2 {
             padding: 0 2rem 0 0;
@@ -122,31 +122,7 @@
         }
 
         & p {
-            padding: 0 2rem 0 2rem;
-        }
-    }
-}
-
-@media only screen and (max-width: 550px) {
-    .boxes {
-        height: 600px;
-
-    }
-
-    .box {
-        height: 7rem;
-
-        & h2 {
-            padding: 0 2rem 0 0;
-        }
-
-        & h1 {
-            padding: 0 2rem 0 2rem;
-
-        }
-
-        & p {
-            visibility: hidden;
+            padding: 0 2rem 0 1rem;
         }
     }
 }
